<resources>
    <string name="app_name">Messenger</string>
    <string name="enter_your_nickname">Enter your Nickname</string>
    <string name="profile_placeholder">Profile placeholder</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sing_in">SING IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="what_i_do">What I do</string>
    <string name="not_registered">Not registered?</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="update">Update</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="username">username</string>
    <string name="job">job</string>
    <string name="search">Search</string>
    <string name="back_button">back button</string>
    <string name="search_icon">search icon</string>
    <string name="type_message_here">type message here</string>
    <string name="send">SEND</string>
    <string name="send_message_button">send message button</string>
    <string name="message">Message</string>
</resources>