<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <ImageView
                android:id="@+id/back_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/back_button" />

            <LinearLayout
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/round_corners"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_search_24"
                    android:contentDescription="@string/search_icon" />

                <EditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/search"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:autofillHints="username" />

            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/users_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>